--- a/react-website-wecreate/package.json
+++ b/react-website-wecreate/package.json
@@ -4,6 +4,9 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "abab": "^2.0.6",
     "accepts": "^1.3.8",
     "acorn": "^8.15.0",
@@ -715,6 +718,7 @@
     "static-eval": "^2.0.2",
     "statuses": "^2.0.1",
     "stop-iteration-iterator": "^1.1.0",
+    "string_decoder": "^1.3.0",
     "string-length": "^4.0.2",
     "string-natural-compare": "^3.0.1",
     "string-width": "^4.2.3",
@@ -726,7 +730,6 @@
     "string.prototype.trimend": "^1.0.9",
     "string.prototype.trimstart": "^1.0.8",
     "stringify-object": "^3.3.0",
-    "string_decoder": "^1.3.0",
     "strip-ansi": "^6.0.1",
     "strip-ansi-cjs": "^6.0.1",
     "strip-bom": "^4.0.0",
@@ -853,7 +856,6 @@
     "yargs-parser": "^20.2.9",
     "yocto-queue": "^0.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
